debug layout issue in production

--- a/styles/index.css
+++ b/styles/index.css
@@ -29,75 +29,6 @@
   }
 }
 
-/* Custom Container Layout */
-
-/* .flex {
-  display: flex;
-}
-
-.we-flex-col-row {
-  flex-direction: column;
-}
-
-@media (min-width: 768px) {
-  .we-flex-col-row {
-    flex-direction: row;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:justify-center {
-    justify-content: center;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:max-w-6xl {
-    max-width: 72rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:m-auto {
-    margin: auto;
-  }
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-@media (min-width: 768px) {
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:w-2\/5 {
-    width: 40%;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:w-full {
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:mt-0 {
-    margin-top: 0;
-  }
-} */
-
 .pagination {
   margin: 15px auto;
   display: flex;
